# ashot

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  ashot.flatpak
.codex-plan/: ashot-v1-todos.md  ashot-v1.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
ashot-app/: Cargo.toml
ashot-app/src/: gtk_app.rs  headless_service.rs  main.rs  render_cache.rs
ashot-capture/: Cargo.toml
ashot-capture/src/: lib.rs
ashot-cli/: Cargo.toml
ashot-cli/src/: main.rs
ashot-core/: Cargo.toml
ashot-core/src/: config.rs  document.rs  export.rs  filename.rs  history.rs  lib.rs  ocr.rs  workflow.rs
ashot-ipc/: Cargo.toml  build.rs
ashot-ipc/src/: lib.rs
docs/: architecture.md  current-project-design.md  release-checklist.md
flatpak/: io.github.ashot.App.json
gnome-shell-extension/ashot-shell@io.github.ashot/: extension.js  metadata.json  stylesheet.css
gnome-shell/extensions/ashot-pin@io.github.ashot/: extension.js  metadata.json
packaging/: io.github.ashot.App.desktop  io.github.ashot.App.metainfo.xml
previews/: highlight-effects.html
repo/: summary  summary.idx
repo/refs/heads/app/io.github.ashot.App/x86_64/: master
repo/refs/heads/appstream/: x86_64
repo/refs/heads/appstream2/: x86_64
repo/refs/heads/runtime/io.github.ashot.App.Debug/x86_64/: master
repo/summaries/: 0f166fa04540bfb484a2936d6512a7a4e961032ffca0b00c54a5e6321a7bc517-57943531f457d1cbc2d0553ddb76e6391047cea5cec9d4bcc64738ef37648524.delta  3bcc177005c631a133093b31996af7e43dbb348e1828a752e5a9e7886efb1be5-57943531f457d1cbc2d0553ddb76e6391047cea5cec9d4bcc64738ef37648524.delta  cec4187ed796a2a3847239349fcf3dfd061af5e7511ee44e09cbc19a576943a9-57943531f457d1cbc2d0553ddb76e6391047cea5cec9d4bcc64738ef37648524.delta
scripts/: build-distro-packages.sh  install-flatpak.sh  install-gnome-extension.sh  install-release-packages.sh  install-shell-extension.sh
