[package]
name = "ashot-app"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[features]
default = ["gtk-ui"]
gtk-ui = [
    "dep:gio",
    "dep:glib",
    "dep:gtk4",
    "dep:libadwaita",
]

[dependencies]
anyhow.workspace = true
ashot-capture = { path = "../ashot-capture" }
ashot-core = { path = "../ashot-core" }
ashot-ipc = { path = "../ashot-ipc" }
chrono.workspace = true
gio = { workspace = true, optional = true }
glib = { workspace = true, optional = true }
gtk4 = { workspace = true, optional = true }
image.workspace = true
libadwaita = { workspace = true, optional = true }
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
zbus.workspace = true
