[package]
name = "ashot-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
chrono.workspace = true
directories.workspace = true
font8x8.workspace = true
image.workspace = true
serde.workspace = true
thiserror.workspace = true
toml.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
